Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-94232

androiddeployqt is broken when manually defining dependencies

XMLWordPrintable

    • Android
    • 6c7d52401 (tqtc/lts-5.15), 65d79fb5f (dev), c8fc63dfd (6.5), 4521dfe75 (dev), b92854aed (dev), 4afdc23ea (6.5), 5341c415c (6.5), 321ce34f3 (tqtc/lts-6.2), 885d6b489 (tqtc/lts-5.15), 8491d03d3 (tqtc/lts-6.2)
    • 2023wk12FOQtforAndroid, 2023wk14FOQtforAndroid, 2023wk16FOQtforAndroid, 2023wk18FOQtforAndroid

      After trying to port our project from 5.12 to 5.15, I found the following blocking issue:

      When ANDROID_DEPLOYMENT_DEPENDENCIES is manually set to only include some modules, androiddeployqt bails out or produces multiple errors:

      • Binaries have been renamed for multi-arch but androiddeployqt is still checking for "libqtforandroid.so" and "libqtforandroidGL.so" while their real name now changed to "libplugins_platforms_qtforandroid.so" (the "lib" should be omitted in that case). It then bails out with "No platform plugin, neither libqtforandroid.so or libqtforandroidGL.so, included in package. Please include one."
      • Architectures are tried to be determined using their file path or even llvm-readobj. For files like "qmldir" or every .jar, it can't figure out the architecture and simply ignores them which leads to no "android_rcc_bundle" being generated at all. When not defining dependencies manually instead, they are picked up since the xml dependencies know them and assign them an architecture. Executing llvm-readobj raises an error for every non-.so-file while building.

       I've attached an example code to replicate the issue. While this is not 100% the same, it gets you an idea. For some reason androiddeployqt is trying to lookup dependencies even though it should not and does not in my other project.

       Unfortunately, just letting Qt figure out the dependencies does not work for the project's architecture and somehow half of the qml code is copied plain text to "android_rcc_bundle" even though we're using qtquickcompiler.

        1. deployment-dependencies.zip
          20 kB
          Christoph Keller
        2. fix-androiddeployqt-deployment-dependencies.diff
          4 kB
          Christoph Keller
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            assam Assam Boudjelthia
            theoriginalgri Christoph Keller
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: